--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,6 @@ dist
 dist-ssr
 *.local
 
-# Database files
-*.db
-.env
-backend/.env
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -27,3 +22,17 @@ backend/.env
 *.njsproj
 *.sln
 *.sw?
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+backend/.env
+backend/.env.local
